--- a/twitter/app/templates/app/home.html
+++ b/twitter/app/templates/app/home.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block content %}
-
+    {% for tweet in tweets %}
+        <p>{{ tweet.author }}   {{ tweet.last_modification }}</p>
+        <p>{{ tweet.content }}</p>
+        <br>
+    {% endfor %}
 {% endblock %}
