--- a/twitter/app/templates/base.html
+++ b/twitter/app/templates/base.html
@@ -9,8 +9,35 @@
     {% endblock %}
     </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <i class="fas fa-home"></i><span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Notifications <i class="far fa-bell"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Messages <i class="far fa-envelope"></i></a>
+            </li>
+            <li class="nav-item ml-5">
+                <a class="navbar-brand" href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            
+        </ul>
+        <form class="form-inline my-2 my-lg-0 ml-auto">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+        <a href="" class="btn btn-primary">Tweet</a>
+
+        
+    </div>
+    </nav>
     {% block content %}
 
     {% endblock %}
